Add Delete Function, Tests

--- a/app/views/items/_item.html.erb
+++ b/app/views/items/_item.html.erb
@@ -1,3 +1,4 @@
 <li class= "list-group-item">
   <%= item.name %>
+  | <%= link_to " ", [current_user, item], method: :delete, remote: true, class: 'glyphicon glyphicon-ok' %>
 </li>
