--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,12 +3,10 @@
 <p>Email: <%= @user.email %></p>
   <div class="row">
     <div class="col-md-8">
-      <% @user.items.each do |item| %>
         <div class="media">
           <div class="media-body">
-           <%= render @user.items %>
+           <div class='js-item'><%= render @user.items %></div>
           </div>
-         <% end %>
         </div>
           <div class="media">
             <div class="media-body">
